<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/textView"
        android:textSize="25dp"
        android:padding="5dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/search_info_rank"
        android:layout_below="@+id/textView"
        android:id="@+id/imageView"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="0dp"
        android:padding="20dp">

        <TableRow >

            <TextView
                android:text="@string/rank_textView2"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#ef6d80"
                />
        </TableRow>


        <TableRow android:layout_margin="5dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:background="@drawable/square_background_rank"
                android:text="@string/rank_button1"
                android:textSize="17dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="104dp"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:background="@drawable/square_background_rank"
                android:text="@string/rank_button2"
                android:textSize="17dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="104dp"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:background="@drawable/square_background_rank"
                android:text="@string/rank_button3"
                android:textSize="17dp" />
        </TableRow>

        <TableRow >

            <TextView
                android:text="@string/rank_textView3"
                android:textSize="18dp"
                android:textColor="#ef6d80"
                android:textStyle="bold"
                />
        </TableRow>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp">

            <RadioButton
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/rd_btn1"
                android:id="@+id/rg_btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mOnClick_rank1"/>

            <RadioButton
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/rd_btn2"
                android:id="@+id/rg_btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mOnClick_rank2"/>

            <RadioButton
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/rd_btn3"
                android:id="@+id/rg_btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mOnClick_rank3"/>

        </RadioGroup>


        <TextView
            android:text="@string/rank_textView4"
            android:background="#c6dbda"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="5dp"

            />



        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>


    </TableLayout>

</RelativeLayout>
