<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/searchSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="#FFFFFFFF"
            android:text="@string/main_search"
            android:textColor="#ADADAD"
            android:drawableEnd="@drawable/ic_search_main_16px" />

        <!-- 메인 버튼 그리드 (2x2) -->
        <GridLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:background="#FFFFFFFF" >

            <!-- 병원 지도 버튼 -->
            <Button
                android:id="@+id/mainButtonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_columnWeight="1"
                android:background="#FFFFFFFF"
                android:drawableTop="@drawable/ic_map2_main_24dp"
                android:text="@string/main_map" />

            <!-- 맞춤형 특수 병원 버튼 -->
            <Button
                android:id="@+id/mainButtonCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_columnWeight="1"
                android:background="#FFFFFFFF"
                android:drawableTop="@drawable/ic_custom_main_24dp"
                android:text="@string/main_custom" />

            <!-- 카메라 서치 버튼 -->
            <Button
                android:id="@+id/mainButtonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_columnWeight="1"
                android:background="#FFFFFFFF"
                android:drawableTop="@drawable/ic_camera_main_24dp"
                android:text="@string/main_camera" />

            <!-- 우수 기관 버튼 -->
            <Button
                android:id="@+id/mainButtonRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_columnWeight="1"
                android:background="#FFFFFFFF"
                android:drawableTop="@drawable/ic_rank_main_24dp"
                android:text="@string/main_rank" />
        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
